--- a/2DO.html
+++ b/2DO.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="icon" type="image/x-icon" href="icon.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style2do.css">
     <title>Day #15 - ToDo App | AsmrProg</title>
 </head>
 
@@ -33,7 +33,7 @@
 
     </div>
 
-    <script src="index.js"></script>
+    <script src="js/2do.js"></script>
 </body>
 
 </html>
