--- a/2DO.html
+++ b/2DO.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="icon" type="image/x-icon" href="icon.ico">
     <link rel="stylesheet" href="css/style2do.css">
-    <title>Day #15 - ToDo App | AsmrProg</title>
+    <title>2Do App</title>
 </head>
 
 <body>
