--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 
 <body>
     <!-- Navbar Start -->
-    <div class="container-fluid position-relative nav-bar p-0">
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-light navbar-light shadow-lg py-3 py-lg-0 pl-3 pl-lg-5">
                 <a href="" class="navbar-brand">
@@ -40,11 +39,10 @@
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="todo.html" class="nav-item nav-link">2DO</a>
+                        <a href="2DO.html" class="nav-item nav-link">2DO</a>
                     </div>
                 </div>
             </nav>
-        </div>
     </div>
     <!-- Navbar End -->
     <!-- Carousel Start -->
@@ -67,7 +65,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Nuevo Lanzamiento!</h4>
                             <h1 class="display-3 text-white mb-md-4">Planifica todo con nuestra nueva app</h1>
-                            <a href="login.html" class="btn btn-primary py-md-3 px-md-5 mt-2">2DO APP</a>
+                            <a href="2DO.html" class="btn btn-primary py-md-3 px-md-5 mt-2">2DO APP</a>
                         </div>
                     </div>
                 </div>
@@ -104,7 +102,6 @@
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
-
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
@@ -113,10 +110,6 @@
     <script src="lib/tempusdominus/js/moment.min.js"></script>
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-
-    <!-- Contact Javascript File -->
-    <script src="mail/jqBootstrapValidation.min.js"></script>
-    <script src="mail/contact.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
