--- a/registro.html
+++ b/registro.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar sesión</title>
+    <title>Registrarse</title>
     <link rel="stylesheet" href="css/log.css">
     <link rel="stylesheet" href="css/style.css">
-    
+
     <!-- Favicon -->
-    <link href="icoxn.ico" rel="icon">
+    <link href="icon.ico" rel="icon">
 </head>
 
 <body>
@@ -33,18 +33,22 @@
     <!-- Navbar End -->
     <div class="container">
         <form action="#">
-            <h2>Iniciar sesión</h2>
+            <h2>Registrarse</h2>
             <div class="input-group">
                 <label for="username">Usuario</label>
                 <input type="text" id="username" name="username" required>
             </div>
             <div class="input-group">
+                <label for="email">Correo electrónico</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="input-group">
                 <label for="password">Contraseña</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <button type="submit">Iniciar sesión</button>
+            <button type="submit">Registrarse</button>
         </form>
-        <p>¿No tienes una cuenta? <a href="registro.html">Regístrate</a></p>
+        <p>¿Ya tienes una cuenta? <a href="login.html">Inicia sesión</a></p>
     </div>
     <script src="js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
