--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Descubre todas nuestras app's</h4>
-                            <h1 class="display-3 text-white mb-md-4">Registrate ahora</h1>
-                            <a href="login.html" class="btn btn-primary py-md-3 px-md-5 mt-2">Log In</a>
+                            <h1 class="display-3 text-white mb-md-4">Registrate Ahora</h1>
+                            <a href="register.html" class="btn btn-primary py-md-3 px-md-5 mt-2">Sign In</a>
                         </div>
                     </div>
                 </div>
